<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>line_follower</name>
  <version>0.0.0</version>
  <description>ROS 2 node for image-based line following using OpenCV and a PID controller.</description>
  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>
  <depend>cv_bridge</depend>
  <depend>opencv</depend>
  <depend>geometry_msgs</depend>
  <depend>python3-scipy</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>